# study-it

./: .gitignore  README.md  pyproject.toml
app/: depends.py
app/api/: __init__.py  auth.py  skills.py  user.py
app/config/: __init__.py  constants.py
app/config/components/: __init__.py  base.py  db.py  redis.py  securaty.py
app/config/envs/: development.py  production.py
app/db/migrations/server/: 1_20260102014216_update.py  2_20260102021451_update.py  3_20260102025541_update.py  4_20260102031608_update.py
app/db/models/: __init__.py  base.py  path.py  progress.py  status.py  user.py
app/neo4j_client/: models.py
app/schemas/: __init__.py  auth_schema.py  graph_schema.py  jwt_schema.py  skill_schema.py  user_schema.py
app/server/: server.py
app/service/: auth.py  base.py  exception.py  jwt_utils.py  progress.py  pwd.py  roadmap.py  skills.py
backend/: .env.example  docker-compose.local.yml  docker-compose.yml  pyproject.toml
backend/app/api/auth/: auth.py
backend/app/config/: __init__.py
backend/app/db/models/: __init__.py  base.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/app/server/: server.py
backend/app/service/: auth.py  base.py
backend/docker/: Dockerfile
